# tb4q

tb4_perception/: package.xml  setup.py
tb4_perception/config/: oakd_pro.yaml  yolo_detector.yaml
tb4_perception/launch/: scan_restamper.launch.py  tf_keepalive.launch.py  yolo_detector.launch.py
tb4_perception/tb4_perception/: scan_restamper_node.py  tf_keepalive_node.py  yolo_detector_node.py
turtlebot4/turtlebot4_bt_plugins/: CMakeLists.txt  package.xml  plugin_description.xml
turtlebot4/turtlebot4_bt_plugins/include/turtlebot4_bt_plugins/: is_goal_behind_condition.hpp  rotate_angle_action.hpp
turtlebot4/turtlebot4_bt_plugins/src/: bt_plugins.cpp  is_goal_behind_condition.cpp  rotate_angle_action.cpp
turtlebot4/turtlebot4_navigation/: CMakeLists.txt
turtlebot4/turtlebot4_navigation/behavior_trees/: navigate_through_poses_no_reverse.xml  navigate_to_pose_no_reverse.xml
turtlebot4/turtlebot4_navigation/config/: fastdds_nav2q.xml  localization.yaml  nav2.yaml  republisher.yaml  tb4
